# csiro-hydrogen-esm-inputs

./: .copier-answers.yml  .env.sample  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  dodo.py  pyproject.toml  zenodo.json
.github/actions/setup/: action.yml
.github/workflows/: bump.yaml  ci.yaml  deploy.yaml  release.yaml
changelog/: 2.trivial.md  3.breaking.md  README.md
data/configuration/: common.yaml  user.sample.yaml
data/configuration/scenarios/: ssp119-high.yaml  ssp119-low.yaml  ssp119-med.yaml  ssp226-high.yaml  ssp226-low.yaml  ssp226-med.yaml  ssp245-high.yaml  ssp245-low.yaml  ssp245-med.yaml
data/raw/baseline_h2_sources/: petterson_2020.csv
data/raw/configuration/: common.yaml  ssp119-low.yaml
data/raw/configuration/scenarios/: ssp119-high.yaml  ssp119-low.yaml  ssp119-med.yaml
data/raw/delta_emissions/: emissions_intensities_combustion_high.csv  emissions_intensities_combustion_low.csv  emissions_intensities_production_high.csv  emissions_intensities_production_low.csv  leakage_rates_high.csv  leakage_rates_low.csv  share_by_carrier_APS.csv  share_by_carrier_NZE.csv  share_by_carrier_SDS.csv
data/raw/gridding/: grid_proxy_mapping.csv  seasonality_mapping_CEDS9.csv
data/raw/spaemis/proxies/: README.md
data/raw/spaemis/templates/: template_australia_H2_scalers.yaml  template_australia_scalers.csv  template_victoria_H2_scalers.yaml  template_victoria_production_scalers.yaml  template_victoria_scalers.csv
data/raw/test-complete-scenario/: emissions_complete_CR-IMAGE_ssp119_low.csv
docs/source/: changelog.md  development.md
notebooks/: 000_make_input_files.py  200_calculate_delta_emissions.py  300_make_figure.py  dev.yaml
notebooks/000_preparation/: 000_decompose_air_seasonality.R  009_prepare_for_processing_gridding.py  010_prepare_input_data.py
notebooks/100_historical_h2_emissions/: 100_calculate_historical_anthropogenic.py  110_downscale_historical_emissions.py  120_grid_historical_emissions.py  130_write_historical_input4MIPs.py
notebooks/200_projected_h2_emissions/: 200_make_input_scenario.py  201_extend_timeseries.py  210_calculate_delta_emissions.py  211_generate_figures.py  220_calculate_baseline_anthropogenic.py  230_merge_emissions.py  240_downscale_projected_emissions.py  250_grid_projected_emissions.py  260_write_projected_input4MIPs.py  270_check_production.py
notebooks/300_projected_concentrations/: 310_run-magicc-for-scenarios.py  311_compare-magicc7-output-cmip6.py  320_download-cmip6-data.py  321_extract-grids-from-cmip6.py  322_projection-gridding.py  330_write-input4MIPs-files.py
notebooks/400_spatial_emissions/: 400_generate_configuration.py  410_run_projection.py
notebooks/500_finalisation/: 500_write-input4MIPs-checklist.py  510_generate_emissions_figures.py
scripts/: upload-bundle-to-zenodo.py
src/local/: __init__.py  config.py  key_info.py  parameters.py  pydoit.py  serialization.py  steps.py
src/local/h2_adjust/: __init__.py  constants.py  downscale.py  exceptions.py  outputs.py  timeseries.py  units.py
src/local/pydoit_nb/: __init__.py  checklist.py  config_discovery.py  gen_notebook_tasks.py  notebooks.py
tests/unit/: test_units.py
