[tool.poetry]
name = "local"
version = "0.1.0"
description = "Local code for generation of hydrogen and associated input files for CSIRO's earth system modelling. The rest of the functionality is derived from the dependencies."
authors = [
    "Jared Lewis <jared.lewis@climate-resource.com>",
    "Zebedee Nicholls <zebedee.nicholls@climate-resource.com>",
]
readme = "README.md"
packages = [{include = "local", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
notebook = "^6.5.4"
doit = "^0.36.0"
ipywidgets = "^8.0.6"
attrs = "^23.1.0"
cattrs = "^22.2.0"
jupytext = "^1.14.5"
papermill = "^2.4.0"
# @Zeb Not sure if I should make a group for the dependencies
scmdata = "^0.15.0"
matplotlib = "^3.7.1"
datapackage = "^1.15"
bookshelf = "^0.2.2"
scipy = "^1.4"

## Temporary pin until requests and botocore support urllib3>=2
# https://github.com/psf/requests/issues/6432
# https://github.com/boto/botocore/issues/2926
urllib3 = "<2"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.2.1"
black = "^23.3.0"
ruff = "^0.0.267"
pre-commit = "^3.3.1"
mypy = "^1.3.0"

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.ruff]
src = ["src"]
target-version = "py39"
select = [
    "E",  # pycodestyle error
    "W",  # pycodestyle warning
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
    "PL",  # pylint
    "TRY",  # tryceratops
    "NPY",  # numpy rules
    "RUF",  # ruff specifics
    "ERA",  # eradicate old commented out code
    "UP",  # pyupgrade
    "S",  # flake8-bandit
    # pandas support via pandas-vet. In some cases we will want to disable
    # this because it can lead to too many false positives.
    "PD",
]
unfixable = [
    "PD002",  # Disable autofix for inplace as this often introduces bugs
]
ignore = [
    "D200",  # One-line docstring should fit on one line with quotes
    "D400",  # First line should end with a period
]
# Provide some leeway for long docstring, this is otherwise handled by black
line-length = 110

[tool.ruff.per-file-ignores]
"notebooks/*" = [
    "D100",  # Missing docstring in public module
    "E402",  # Module level import not at top of file
    "ERA001",  # False positive while parsing jupytext header
    "S101",  # Use of `assert` detected
]
"stubs/*" = [
    "D100",  # Missing docstring in public module
    "D103",  # Missing docstring in public function
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.ruff.pydocstyle]
convention = "numpy"
