[tool.poetry]
name = "local"
version = "0.5.0"
description = "Local code for generation of hydrogen and associated input files for CSIRO's earth system modelling. The rest of the functionality is derived from the dependencies."
authors = [
    "Jared Lewis <jared.lewis@climate-resource.com>",
    "Rebecca Burdon <rebecca.burdon@climate-resource.com>",
    "Zebedee Nicholls <zebedee.nicholls@climate-resource.com>",
]
readme = "README.md"
packages = [{include = "local", from = "src"}]
license = "BSD-3-Clause"


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
notebook = "^6.5.4"
doit = "^0.36.0"
ipywidgets = "^8.0.6"
attrs = "^23.1.0"
cattrs = "^22.2.0"
jupytext = "^1.14.5"
papermill = "^2.4.0"
scmdata = "^0.15.1"
matplotlib = "^3.7.1"
datapackage = "^1.15"
bookshelf = "^0.2.2"
scipy = "^1.4"
# TODO: remove dependency
# Technically it is MIT, but I don't think that is what CA intended
domestic-pathways = {git = "https://gitlab.com/lewisjarednz/domestic_pathways.git", rev="custom-registry"}
seaborn = "^0.12.2"
joblib = "^1.2.0"
aneris-iamc = {git = "https://github.com/lewisjared/aneris.git", rev = "feng"}
netcdf4 = "^1.6.3"
carpet-concentrations = {extras = ["cfxarray"], version = "^0.4.0"}

## Temporary pin until requests and botocore support urllib3>=2
# https://github.com/psf/requests/issues/6432
# https://github.com/boto/botocore/issues/2926
urllib3 = "<2"
openscm-runner = "^0.12.1"
pymagicc = "^2.1.3"
nc-time-axis = "^1.4.1"
spaemis = "^0.2.3"
deepmerge = "^1.1.0"
pyreadr = "^0.4.7"
openscm-zenodo = "^0.1.3"
datatoolbox = "0.5.6"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
coverage = "^7.2.0"
black = "23.3.0"
blackdoc = "0.3.8"
mypy = "^1.2.0"
ruff = "0.0.267"
pre-commit = "^3.3.1"
towncrier = "^23.6.0"
liccheck = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 95
skip_empty = true
show_missing = true
# Regexes for lines to exclude from consideration in addition to the defaults
exclude_also = [
    # Don't complain about missing type checking code:
    "if TYPE_CHECKING",
]

[tool.mypy]
#strict = true
## prevent unimported libraries silently being treated as Any
#disallow_any_unimported = true
## show error codes on failure with context
#show_error_codes = true
#show_error_context = true
## warn if code can't be reached
#warn_unreachable = true
## importing following uses default settings
#follow_imports = "normal"

[[tool.mypy.overrides]]
module = "scmdata.*"
ignore_missing_imports = true


[tool.jupytext]
formats = "ipynb,py:percent"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
src = ["src"]
target-version = "py39"
select = [
    "E",  # pycodestyle error
    "W",  # pycodestyle warning
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
    "PL",  # pylint
    "TRY",  # tryceratops
    "NPY",  # numpy rules
    "RUF",  # ruff specifics
    "UP",  # pyupgrade
    "S",  # flake8-bandit
    # pandas support via pandas-vet. In some cases we will want to disable
    # this because it can lead to too many false positives.
    "PD",
]
unfixable = [
    "PD002",  # Disable autofix for inplace as this often introduces bugs
]
ignore = [
    "D200",  # One-line docstring should fit on one line with quotes
    "D400",  # First line should end with a period
]
# Provide some leeway for long docstring, this is otherwise handled by black
line-length = 110

[tool.ruff.per-file-ignores]
"notebooks/*" = [
    "D100",  # Missing docstring in public module
    "E402",  # Module level import not at top of file
    "E501",  # Line too long (false failure on comments coming from markdown cells)
    "S101",  # Use of `assert` detected
    "PD010", # `.pivot_table` is preferred to `.pivot` or `.unstack`; provides same functionality
    "PD011", # False positives when using scmdata
]
"stubs/*" = [
    "D100",  # Missing docstring in public module
    "D103",  # Missing docstring in public function
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.towncrier]
package = "csiro-hydrogen-esm-inputs"
package_dir = "src"
filename = "docs/source/changelog.md"
directory = "changelog/"
title_format = "## csiro-hydrogen-esm-inputs {version} ({project_date})"
underlines = ["", "", ""]
issue_format = "[#{issue}](https://github.com/climate-resource/csiro-hydrogen-esm-inputs/pulls/{issue})"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "improvement"
  name = "Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "fix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Trivial/Internal Changes"
  showcontent = false

[tool.liccheck]
authorized_licenses = [
    "bsd",
    "bsd license",
    "BSD 3-Clause",
    "CC0",
    "apache",
    "apache 2.0",
    "apache software",
    "apache software license",
    "Apache License, Version 2.0",
    "Historical Permission Notice and Disclaimer (HPND)",
    "isc license",
    "isc license (iscl)",
    "gnu lgpl",
    "lgpl with exceptions or zpl",
    "LGPLv2+",
    "GNU Lesser General Public License v2 (LGPLv2)",
    "GNU Lesser General Public License v2 or later (LGPLv2+)",
    "mit",
    "mit license",
    "Mozilla Public License 2.0 (MPL 2.0)",
    "python software foundation",
    "python software foundation license",
    "zpl 2.1",
]
# This starting list is relatively conservative. Depending on the project, it
# may make sense to move some of these into the authorized list
unauthorized_licenses = [
    "agpl",
    "gnu agpl",
    "gpl v3",
    "gplv3",
    "gpl v2",
    "gplv2",
    "gpl v1",
    "gplv1",
]

[tool.liccheck.authorized_packages]
datatoolbox = "0.5.6"  # Repository contains MIT license file - https://gitlab.com/climateanalytics/datatoolbox
